--- a/Landing/style.css
+++ b/Landing/style.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    background: #080708;
+    background: #727D83;
 }
 
 span{
@@ -17,46 +17,55 @@ span{
 }
 
 h2{
-    font-size:2.1875rem;
+    font-size:2rem;
     color: #f5f5f5;
 }
 
+h3{
+    font-size: 1.25rem;
+    color: #f5f5f5;
+}
+
+h4{
+    font-size: 0.75rem;
+    color: #f5f5f5;
+    font-weight: 400;
+}
+.yellow{
+    color: #FFBA08;
+}
+
+.red{
+    color: #DA0303;
+}
+
+.blue{
+    color: #3AAFB9;
+}
 .container{
-    height: 1050px;
+    height: 48rem;
     display: flex;
     justify-content: center;
     padding: 4%;
 }
 
-.texto_intro{
-    padding: 2.5%;
-    height: 920px;
-    width: 500px;
-    background: #232338;
+.intro{
+    padding: 2rem;
+    height: 110%;
+    width: 30rem;
+    background: #080708;
     border-radius: 10px;
 }
 
-.forms{
-    margin-left: 2rem;
-    margin-top: 2rem;
-    height: 600px;
-    width: 500px;
-}
-
-.texto_intro h2{
+.intro h2{
     max-width: 500px;
 }
 
-.span_amarelo{
-    color: #FFBA08;
-}
-
-.span_vermelho{
-    color: #DA0303;
-}
-
-.span_azul{
-    color: #3AAFB9;
+.forms{
+    margin-top: 1rem;
+    margin-left: 2rem;
+    height: 600px;
+    width: 500px;
 }
 
 #input_group{
@@ -70,25 +79,20 @@ h2{
 #input_group input{
     border-radius: 10px;
     border: none;
-    margin: 3%;
+    margin: 0.5rem;
     padding: 0.75rem;
     width: 80%;
 }
-
-.forms img{
-    margin-top: 7rem;
-    margin-bottom: 7rem;
-}
-
 
 #input_group button{
     background-color: #DA0303;
     border: none;
     color: #f5f5f5;
     padding: 0px 1.25rem;
-    font-size: 1.125rem;
-    height: 100%;
-    border: 0px 4px 4px 0px;
+    font-size: 1.5rem;
+    height: 2.5rem;
+    width: 5rem;
+    border-radius: 10px;
     cursor: pointer;
     transition: opacity 0.4s;
     z-index: 1;
@@ -99,11 +103,236 @@ h2{
 }
 
 .video_frame{
-    margin-top: 2rem;
     width: 100%;
-    height: 300px;
+    height: 17rem;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 2rem;
+    margin-top: 2rem;
+    border-radius: 10px;
+}
+
+.img_slider{
+    background: #080708;
+    margin: auto;
+    width: 65%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.info_text img{
+    padding-top: 2rem;
+    max-width: 80%;
+}
+
+.info_text{
+    width: 500px;
+    padding: 2.5%;
+}
+
+.info_text h3{
+    border-left: 0.3rem solid #f5f5f5;
+    border-bottom: none;
+    border-top: none;
+    border-right: none;
+    margin-top: 1rem;
+    padding-left: 2rem;
+}
+
+.benefits{
+    margin-top: 4.5rem;
+    max-width: 30rem;
+}
+
+.benefit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    gap: 2rem;
+    border-radius: 10px;
+    background: #080708;
+    margin-bottom: 3rem;
+}
+
+.benefit i {
+    
+    font-size: 3rem;
+    color: #f5f5f5;
+    margin: 1rem;
+}
+
+.benefit h2 {
+    padding: 1rem;
+    color: #f5f5f5;
+    font-size: 1.5rem;
+}
+
+.container_examples{
+    height: 48rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.formation_title{
+    padding: 0 2rem 0 2rem;
+    max-width: 50rem;
+    text-align: center;
+    max-height: 10rem;
+    margin-bottom: 5rem;
+    margin-top: 2rem;
+}
+
+.salary_container{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container_examples h3{
+    text-transform: uppercase;
+}
+
+.low_bar{
+    background: #080708;
+    width: 55vw;
+    height: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    border-radius: 25px;
+}
+
+.low_filling{
+    background: #3AAFB9;
+    height: 100%;
+    width: 25%;
+    border-radius: 25px;
+}
+
+.medium_bar{
+    background: #080708;
+    width: 55vw;
+    height: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    border-radius: 25px;
+}
+
+.medium_filling{
+    background: #DA0303;
+    height: 100%;
+    width: 50%;
+    border-radius: 25px;
+}
+
+.high_bar{
+    background: #080708;
+    width: 55vw;
+    height: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    border-radius: 25px;
+}
+
+.high_filling{
+    background: #FFBA08;
+    height: 100%;
+    width: 75%;
+    border-radius: 25px;
+}
+
+.footer_link{
+    text-decoration: none;
+}
+
+#footer_content{
+    background-color: #080708;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3rem 3.5rem;
+}
+
+#footer_contacts h1{
+    margin-bottom: 0.75rem;
+}
+
+#footer_social_media{
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+}
+
+#footer_social_media .footer_link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: #f5f5f5;
+    border-radius: 50%;
+    transition: all 0.4s;
+}
+
+#footer_social_media .footer_link i{
+    font-size: 1.25rem;
+}
+
+#footer_social_media .footer_link:hover{
+    opacity: 0.8;
+}
+
+.footer_logo img{
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+}
+
+.footer_list{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    list-style: none;
+    max-width: 10rem;
+}
+
+.footer_list h4{
+    font-size: 1rem;
+}
+
+.footer_list li{
+    font-weight: 300;
+}
+
+.footer_list .footer_link{
+    color: #f5f5f5;
+    transition: all 0.4s;
+}
+
+.footer_list .footer_link:hover{
+    color:  #DA0303;
+}
+
+#footer_subscribe{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+}
+
+#footer_subscribe p{
+    color: #f5f5f5;
+}
+
+#footer_copyright{
+    color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    background-color: #000;
+    font-size: 0.9rem;
+    padding: 1.5rem;
+    font-weight: 300;
+    letter-spacing: 2px;
 }
